# moss

./: .gitignore  .mcp.json  CHANGELOG.md  CLAUDE.md  Cargo.toml  GEMINI.md  README.md  TODO.md  action.yml  coverage.json  flake.nix  install.sh  pyproject.toml
.claude/: mcp.json
crates/moss-cli/: Cargo.toml
crates/moss-cli/src/: analyze.rs  anchors.rs  cfg.rs  complexity.rs  daemon.rs  deps.rs  edit.rs  external_packages.rs  grep.rs  health.rs  index.rs  main.rs  overview.rs  path_resolve.rs  resolution.rs  scopes.rs  skeleton.rs  summarize.rs  symbols.rs  tree.rs
crates/moss-cli/src/commands/: analyze.rs  analyze_cmd.rs  callers.rs  daemon.rs  deps.rs  edit.rs  expand.rs  find_symbols.rs  index.rs  lint.rs  mod.rs  package.rs  path_cmd.rs  search.rs  summarize_cmd.rs  symbols_cmd.rs  tree_cmd.rs  view.rs  view_cmd.rs  workflow.rs
crates/moss-cli/src/serve/: lsp.rs  mcp.rs  mod.rs
crates/moss-cli/src/workflow/: config.rs  execute.rs  llm.rs  lua_runtime.rs  mod.rs  strategies.rs
crates/moss-daemon/: Cargo.toml
crates/moss-daemon/src/: index.rs  main.rs  symbols.rs
docs/: agentic-loop.md  api-boundaries.md  architecture-decisions.md  architecture-review-dec22.md  cli-architecture.md  codebase-tree.md  dwim-architecture.md  hybrid-loops.md  language-support.md  llm-evaluation.md  log-analysis.md  memory-system.md  nested-execution.md  philosophy.md  primitives-spec.md  prior-art.md  restructuring-plan.md  session-modes.md  tools.md  tui-design.md  tui.md  unification.md  view-filtering.md  vision.md  workflow-format.md
examples/: hybrid_loop.py
(+364 files in other folders)
