[package]
name = "moss-daemon"
version.workspace = true
edition.workspace = true

[[bin]]
name = "mossd"
path = "src/main.rs"

[dependencies]
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
ignore = { workspace = true }
notify = { workspace = true }
tree-sitter = { workspace = true }
tree-sitter-python = { workspace = true }
tree-sitter-rust = { workspace = true }
